--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="links">
                     <li><a href="https://soundcloud.com/">soundcloud</a></li>
                     <li><a href="http://lolicore.org/">lolicore</a></li>
-                    <li><a href="https://www.youtube.com/playlist?list=LLOIGNiVujucbvnRetw-k_hA">y-playlist</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=ums8n8tTL6M">y-playlist</a></li>
                     <li><a href="https://lainchan.org/music/res/898.html">/music/</a></li>
                 </div>
             </ul>
