--- a/index.html
+++ b/index.html
@@ -44,22 +44,23 @@
                     <li>
                         <h1>Fun</h1>
                         <a href="https://4chan.org/a/">/a/</a>
-                        <a href="https://4chan.org/jp/">/jp/</a>
-                        <a href="https://4chan.org/r9k/">/r9k/</a>
-                        <a href="https://www.4chan.org/wg/">/wg/</a>
+                        <a href="https://4chan.org/tv/">/tv/</a>
+                        <a href="https://4chan.org/fa/">/fa/</a>
+                        <a href="https://2ch.hk/b/">/Б/</a>
                     </li>
                     <li>
                         <h1>Comfy</h1>
-                        <a href="https://sushigirl.us/kawaii/">/kawaii/</a>
                         <a href="https://sushigirl.us/lounge/">/lounge/</a>
-                        <a href="https://www.4chan.org/wsg/">/wsg/</a>
+                        <a href="https://www.4chan.org/wg/">/wg/</a>
+                        <a href="https://boards.systemspace.link/">つき</a>
+                        <a href="https://arisuchan.jp/">/arisu/</a>
+                        <a href="http://afternoon.dynu.com/letterbox.html">post office</a>
                     </li>
                     <li>
                         <h1>Technology</h1>
                         <a href="https://4chan.org/g/">/g/</a>
-                        <a href="https://www.lainchan.org/lambda/">/λ/</a>
                         <a href="https://www.lainchan.org/sec/">/sec/</a>
-                        <a href="https://boards.420chan.org/prog/">/prog/</a>
+                        <a href="https://arisuchan.jp/ru/">/ru/</a>
                         <a href="https://8ch.net/g/">/8g/</a>
                     </li>
                 </div>
@@ -67,18 +68,17 @@
             <ul class="music">
                 <div class="links">
                     <li><a href="https://soundcloud.com/">soundcloud</a></li>
-                    <li><a href="http://lolicore.org/">lolicore</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=ums8n8tTL6M">y-playlist</a></li>
-                    <li><a href="https://lainchan.org/music/res/898.html">/music/</a></li>
+                    <li><a href="https://www.youtube.com/playlist?list=LLOIGNiVujucbvnRetw-k_hA">y-playlist</a></li>
+                    <li><a href="https://arisuchan.jp/radio.php">/radio/</a></li>
                 </div>
             </ul>
-            <ul class="tech">
+            <ul class="Daily">
                 <div class="links">
-                    <li><a href="https://arisuchan.jp/">arisuchan</a></li>
-                    <li><a href="https://systemspace.link/">つき</a></li>
-                    <li><a href="https://docs.racket-lang.org/">racket</a></li>
-                    <li><a href="https://stallman.org/">stallman</a></li>
-                    <li><a href="http://afternoon.dynu.com/letterbox.html">post office</a></li>
+                    <li><a href="https://mail.google.com/">gmail</a></li>
+                    <li><a href="https://protonmail.com/">protonmail</a></li>
+                    <li><a href="https://campus.ie.edu/">campus</a></li>
+                    <li><a href="https://www.youtube.com/">yt</a></li>
+                    <li><a href="https://meduza.io/">meduza</a></li>
                 </div>
             </ul>
         </div>
