--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
                     </li>
                     <li>
                         <h1>Comfy</h1>
-                        <a href="https://sushigirl.us/lounge/">/lounge/</a>
                         <a href="https://www.4chan.org/wg/">/wg/</a>
                         <a href="https://boards.systemspace.link/">つき</a>
                         <a href="https://arisuchan.jp/">/arisu/</a>
                         <a href="http://afternoon.dynu.com/letterbox.html">post office</a>
+                        <a href="https://sushigirl.us/lounge/">/lounge/</a>
                     </li>
                     <li>
                         <h1>Technology</h1>
@@ -79,6 +79,7 @@
                     <li><a href="https://campus.ie.edu/">campus</a></li>
                     <li><a href="https://www.youtube.com/">yt</a></li>
                     <li><a href="https://meduza.io/">meduza</a></li>
+                    <li><a href="https://github.com/">git</a></li>
                 </div>
             </ul>
         </div>
