--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
                     <li><a href="https://www.youtube.com/">yt</a></li>
                     <li><a href="https://meduza.io/">meduza</a></li>
                     <li><a href="https://github.com/">git</a></li>
+                    <li><a href="https://kissanime.ru/">k_a</a></li>
+                    <li><a href="https://www.netflix.com">ntflx</a></li>
                 </div>
             </ul>
         </div>
