--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                         <a href="https://www.lainchan.org/sec/">/sec/</a>
                         <a href="https://arisuchan.jp/ru/">/ru/</a>
                         <a href="https://8ch.net/g/">/8g/</a>
+                        <a href="https://www.reddit.com/r/unixporn/">/r/unixp</a>
                     </li>
                 </div>
             </ul>
