--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
                     <li><a href="https://arisuchan.jp/radio.php">/radio/</a></li>
                 </div>
             </ul>
-            <ul class="Daily">
+            <ul class="daily">
                 <div class="links">
                     <li><a href="https://mail.google.com/">gmail</a></li>
                     <li><a href="https://protonmail.com/">protonmail</a></li>
                     <li><a href="https://campus.ie.edu/">campus</a></li>
-                    <li><a href="https://www.youtube.com/">yt</a></li>
+                    <li><a href="https://www.youtube.com/">YYTT</a></li>
                     <li><a href="https://meduza.io/">meduza</a></li>
                     <li><a href="https://github.com/">git</a></li>
                     <li><a href="https://kissanime.ru/">k_a</a></li>
