--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <li><a href="https://arisuchan.jp/radio.php">/radio/</a></li>
                 </div>
             </ul>
-            <ul class="dai ly">
+            <ul class="common">
                 <div class="links">
                     <li><a href="https://mail.google.com/">gmail</a></li>
                     <li><a href="https://protonmail.com/">protonmail</a></li>
