--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                     <li><a href="https://github.com/">git</a></li>
                     <li><a href="https://kissanime.ru/">k_a</a></li>
                     <li><a href="https://www.netflix.com">ntflx</a></li>
+                    <li><a href="https://www.chess.com">Chess</a></li>
                 </div>
             </ul>
         </div>
