--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
                         <h1>Technology</h1>
                         <a href="https://4chan.org/g/">/g/</a>
                         <a href="https://www.lainchan.org/sec/">/sec/</a>
-                        <a href="https://arisuchan.jp/ru/">/ru/</a>
                         <a href="https://8ch.net/g/">/8g/</a>
                         <a href="https://www.reddit.com/r/unixporn/">/r/unixp</a>
                     </li>
@@ -70,7 +69,6 @@
                 <div class="links">
                     <li><a href="https://soundcloud.com/">soundcloud</a></li>
                     <li><a href="https://www.youtube.com/playlist?list=LLOIGNiVujucbvnRetw-k_hA">y-playlist</a></li>
-                    <li><a href="https://arisuchan.jp/radio.php">/radio/</a></li>
                 </div>
             </ul>
             <ul class="common">
@@ -82,7 +80,7 @@
                     <li><a href="https://meduza.io/">meduza</a></li>
                     <li><a href="https://github.com/">git</a></li>
                     <li><a href="https://kissanime.ru/">k_a</a></li>
-                    <li><a href="https://www.netflix.com">ntflx</a></li>
+                    <li><a href="https://www.twitch.tv">TTV</a></li>
                     <li><a href="https://www.chess.com">Chess</a></li>
                 </div>
             </ul>
