--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                         <a href="https://4chan.org/tv/">/tv/</a>
                         <a href="https://4chan.org/fa/">/fa/</a>
                         <a href="https://2ch.hk/b/">/Б/</a>
+                        <a href="https://4chan.org/pol/">/pol/</a>
                     </li>
                     <li>
                         <h1>Comfy</h1>
