--- a/index.html
+++ b/index.html
@@ -76,11 +76,10 @@
                 <div class="links">
                     <li><a href="https://mail.google.com/">gmail</a></li>
                     <li><a href="https://protonmail.com/">protonmail</a></li>
-                    <li><a href="https://campus.ie.edu/">campus</a></li>
                     <li><a href="https://www.youtube.com/">YYTT</a></li>
                     <li><a href="https://meduza.io/">meduza</a></li>
                     <li><a href="https://github.com/">git</a></li>
-                    <li><a href="https://kissanime.ru/">k_a</a></li>
+                    <li><a href="https://aniwatch.me/">a_w</a></li>
                     <li><a href="https://www.twitch.tv">TTV</a></li>
                     <li><a href="https://www.chess.com">Chess</a></li>
                 </div>
