--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                     <li><a href="https://aniwatch.me/">a_w</a></li>
                     <li><a href="https://www.twitch.tv">TTV</a></li>
                     <li><a href="https://www.chess.com">Chess</a></li>
+                    <li><a href="https://app.simplenote.com/">Notes</a></li>
                 </div>
             </ul>
         </div>
