--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                         <a href="https://arisuchan.jp/">/arisu/</a>
                         <a href="http://afternoon.dynu.com/letterbox.html">post office</a>
                         <a href="https://sushigirl.us/lounge/">/lounge/</a>
+                        <a href="https://boards.4channel.org/x/">/x/</a>
                     </li>
                     <li>
                         <h1>Technology</h1>
